tests/type-errors/for_ident_simple_map.arl
archetype for_ident_double_map

entry exec () {
  effect {
    var m : (int * string) map = [];
    for i in m do
      ()
    done
  }
}
